# openenv-supportops-agent

./: .gitignore  DELIVERY_SUMMARY.md  Dockerfile  PRD.txt  PROJECT_COMPLETE.md  README.md  app.py  final_validation.py  inference.py  openenv.yaml  pyproject.toml  quickstart.py  requirements.txt  verify.py
server/: app.py
supportopsenv/: __init__.py  environment.py  graders.py  models.py  reward.py  tasks.py
supportopsenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
